# ocaml-examples

./: .gitignore  README.md  basic.ml  ctx.ml  error.ml  eval_alg.ml  poly.ml  state.ml  state_alg.ml  state_map.ml  traverse.ml
algorithm/: ch1.ml  ch10.ml  ch10_thinning.ml  ch11.ml  ch12.ml  ch2.ml  ch4_1.ml  ch4_2.ml  ch6_2.ml  ch6_3.ml  ch7.ml  ch8.ml  coin.ml  dune  graph.ml  knapsack.ml  lib.ml  random.ml  symlist.ml  tree.ml
cata-in-ocaml/: README.md  traverse.ml
dune-lib-kit/: .gitignore  .ocamlformat  dune  dune-project
dune-lib-kit-(obsolete)/: Makefile  README.md  dune  lib.ml
dune-project-kit/: .gitignore  Makefile  README.md  dune-project  fancy.opam
dune-project-kit/lambda/: dune
dune-project-kit/src/: dune
dune-project-kit/src/dedup/: foo.ml  foo.mli  foo_intf.ml
dune-project-kit/src/mylib/: dune  lib.mli
dune-project-kit/test/: test.ml
example-metapp/: README.md  dune  dune-project  lib.ml
lazycat/: abstract_ast_helper.ml  analysis.ml  analysis_monad.ml  draft.ml  test.ml
llvm-in-ocaml/: README.md  dune  dune-project
nondeterminism-linked/: Makefile  associativity.ml  cartesian.ml  common.ml  dune  in_linked_bad.ml  in_list.ml  in_set.ml  lib.ml  nondeter.ml  nondeter_linked.ml
ocaml5-play/: dune  t4.md  t5.md
prettyprint/: Makefile  ast.ml  dune  dune-project  example.ml  monad.ml  pp1.ml  pp2.ml  styling.ml  styling_itest.ml  vanilla.ml
print-and-format/: .gitignore  README.md  dune  dune-project  lib.ml  (+2 more)
z3-play/: assuming.ml  ast.ml  control_tree.ml  decision.ml  dune  dune-project  typing.ml  typing_z3.ml  z3example.ml
(+45 files in other folders)
