(library
 (name zz3lib)
;  (public_name phoenix_lib.lib)
 (synopsis "the library demo")
 (inline_tests)
 (libraries core sexplib z3 lwt lwt.unix fmt)
;  (preprocess
;   (pps ppx_expect))
  (preprocess
    (pps ppx_jane -allow-unannotated-ignores ppx_deriving.show lwt_ppx)) 
  )
(env
  (dev
    (flags (:standard -w -33 -w -26))))